Changes to Index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    
     
     <hr>
-    <h2>Certifications</h2>
+    <h2>My Certifications</h2>
     <ol>
                 
             <li>SAFe Agile (SDP 4.5) Certified</li>
